added bookmarklet link

--- a/index.html
+++ b/index.html
@@ -52,10 +52,15 @@
       Sanity check for table-based HTML emails.
     </div>
 
-    <h2>Authors</h2>
-<p>Gabriel Gilder (ggilder@tractionco.com)<br/><br/>      </p>
+<h2>Installation</h2>
+<p>Drag this link to your bookmarks bar: <a href="javascript:(function(){t=document.createElement('script');t.setAttribute('src','http://github.com/traction/TableMaths/raw/master/tablemaths.js');document.body.appendChild(t);})()">Table Maths</a></p>
+<h2>Authors</h2>
+<p>Gabriel Gilder (ggilder@tractionco.com)
+<br/>
+<br/>      </p>
 <h2>Contact</h2>
-<p>Traction (faun@tractionco.com)<br/>      </p>
+<p>Traction (faun@tractionco.com)
+<br/>      </p>
 
 
     <h2>Download</h2>
