--- a/index.html
+++ b/index.html
@@ -38,13 +38,6 @@
 
   <div id="container">
 
-    <div class="download">
-      <a href="http://github.com/traction/TableMaths/zipball/master">
-        <img border="0" width="90" src="http://github.com/images/modules/download/zip.png"></a>
-      <a href="http://github.com/traction/TableMaths/tarball/master">
-        <img border="0" width="90" src="http://github.com/images/modules/download/tar.png"></a>
-    </div>
-
     <h1><a href="http://github.com/traction/TableMaths">TableMaths</a>
       <span class="small">by <a href="http://github.com/traction">traction</a></span></h1>
 
@@ -52,27 +45,23 @@
       Sanity check for table-based HTML emails.
     </div>
 
-<h2>Installation</h2>
-<p>Drag this link to your bookmarks bar: <a href="javascript:(function(){t=document.createElement('script');t.setAttribute('src','http://github.com/traction/TableMaths/raw/master/tablemaths.js');document.body.appendChild(t);})()">Table Maths</a></p>
-<h2>Authors</h2>
-<p>Gabriel Gilder (ggilder@tractionco.com)
-<br/>
-<br/>      </p>
-<h2>Contact</h2>
-<p>Traction (faun@tractionco.com)
-<br/>      </p>
+	<h2>Installation:</h2>
+	<p>Drag this link to your bookmarks bar: <a href="javascript:(function(){t=document.createElement('script');t.setAttribute('src','http://github.com/traction/TableMaths/raw/master/tablemaths.js');document.body.appendChild(t);})()">Table Maths</a></p>
 
+	<h2>The problem:</h2>
+	<p>HTML emails are, by necessity, chock-full of ugly, deeply nested, brain-scarring table constructions. Getting all the math right on your first try is both difficult, and painful. Tables just plain suck, and it's not like Outlook 2007 is helping anything.</p>
 
-    <h2>Download</h2>
-    <p>
-      You can download this project in either
-      <a href="http://github.com/traction/TableMaths/zipball/master">zip</a> or
-      <a href="http://github.com/traction/TableMaths/tarball/master">tar</a> formats.
-    </p>
-    <p>You can also clone the project with <a href="http://git-scm.com">Git</a>
-      by running:
-      <pre>$ git clone git://github.com/traction/TableMaths</pre>
-    </p>
+	<h2>The solution:</h2>
+	<p>Table Maths! A little JavaScript bookmarklet that looks through your code and lets you know when something ain't right. Place it in your bookmarks bar and you'll have one-click access to a status report on any table or td tags that have incorrect or suspicious widths.</p>
+
+	<h2>Bonus:</h2>
+	<p>The little report window is draggable and resizable so you can get it out of your way. Hover over any of the tags listed in the report and they're magically highlighted on the page!</p>
+
+	<h2>Compatibility:</h2>
+	<p>Currently tested in Firefox, Safari, and Chrome.</p>
+
+	<h2>Authors</h2>
+	<p>Gabriel Gilder (ggilder@tractionco.com)</p>
 
     <div class="footer">
       get the source code on GitHub : <a href="http://github.com/traction/TableMaths">traction/TableMaths</a>
