--- a/index.html
+++ b/index.html
@@ -45,19 +45,19 @@
       Sanity check for table-based HTML emails.
     </div>
 
-	<h2>Installation:</h2>
+	<h2>Installation</h2>
 	<p>Drag this link to your bookmarks bar: <a href="javascript:(function(){t=document.createElement('script');t.setAttribute('src','http://github.com/traction/TableMaths/raw/master/tablemaths.js');document.body.appendChild(t);})()">Table Maths</a></p>
 
-	<h2>The problem:</h2>
+	<h2>The problem</h2>
 	<p>HTML emails are, by necessity, chock-full of ugly, deeply nested, brain-scarring table constructions. Getting all the math right on your first try is both difficult, and painful. Tables just plain suck, and it's not like Outlook 2007 is helping anything.</p>
 
-	<h2>The solution:</h2>
+	<h2>The solution</h2>
 	<p>Table Maths! A little JavaScript bookmarklet that looks through your code and lets you know when something ain't right. Place it in your bookmarks bar and you'll have one-click access to a status report on any table or td tags that have incorrect or suspicious widths.</p>
 
-	<h2>Bonus:</h2>
+	<h2>Bonus</h2>
 	<p>The little report window is draggable and resizable so you can get it out of your way. Hover over any of the tags listed in the report and they're magically highlighted on the page!</p>
 
-	<h2>Compatibility:</h2>
+	<h2>Compatibility</h2>
 	<p>Currently tested in Firefox, Safari, and Chrome.</p>
 
 	<h2>Authors</h2>
