moving js file to gh-pages for better performance

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     </div>
 
 	<h2>Installation</h2>
-	<p>Drag this link to your bookmarks bar: <a href="javascript:(function(){t=document.createElement('script');t.setAttribute('src','http://github.com/traction/TableMaths/raw/master/tablemaths.js');document.body.appendChild(t);})()">Table Maths</a></p>
+	<p>Drag this link to your bookmarks bar: <a href="javascript:(function(){t=document.createElement('script');t.setAttribute('src','http://traction.github.com/TableMaths/tablemaths.js');document.body.appendChild(t);})()">Table Maths</a></p>
 
 	<h2>The problem</h2>
 	<p>HTML emails are, by necessity, chock-full of ugly, deeply nested, brain-scarring table constructions. Getting all the math right on your first try is both difficult, and painful. Tables just plain suck, and it's not like Outlook 2007 is helping anything.</p>
