* Style changes to public site. * SCSS enabled via Jekyll. * Lots of minor stile fixes. * SCSS-Lint defined. * Don't pass over Readme and Gemfiles.

--- a/index.html
+++ b/index.html
@@ -2,18 +2,13 @@
 layout: default
 title: TableMaths by Traction
 ---
-<a href="https://github.com/traction/TableMaths"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub" /></a>
+<h1>TableMaths <small>by <a href="https://tractionco.com">Traction</a></small></h1>
 
-<div id="container">
-  
-  <h1>TableMaths <span class="small">by <a href="https://github.com/traction">Traction</a></span></h1>
-
-  <div class="description">
-    Sanity check for table-based HTML emails.
-  </div>
+<p class="description">Sanity check for table-based HTML emails.</p>
 
 <h2>Installation</h2>
-<p>Drag this link to your bookmarks bar: <a class="bookmarklet" href="javascript:(function(){t=document.createElement('script');t.setAttribute('src','https://traction.github.io/TableMaths/tablemaths.js');document.body.appendChild(t);})()" title="Table Maths" onclick="alert('Don\'t click me, just drag me to your bookmarks bar!');return false;">Table Maths</a></p>
+<p>Drag this link to your bookmarks bar:</p>
+<p><a class="bookmarklet" href="javascript:(function(){t=document.createElement('script');t.setAttribute('src','https://traction.github.io/TableMaths/tablemaths.js');document.body.appendChild(t);})()" title="Table Maths" onclick="alert('Don\'t click me, just drag me to your bookmarks bar!');return false;">Table Maths</a></p>
 
 <h2>The problem</h2>
 <p>HTML emails are, by necessity, chock-full of ugly, deeply nested, brain-scarring table constructions. Getting all the math right on your first try is both difficult, and painful. Tables just plain suck, and it's not like Outlook 2007 is helping anything.</p>
@@ -30,8 +25,6 @@ title: TableMaths by Traction
 <h2>Authors</h2>
 <p><a href="https://github.com/ggilder">Gabriel Gilder</a></p>
 
-  <div class="footer">
-    get the source code on GitHub : <a href="https://github.com/traction/TableMaths">traction/TableMaths</a>
-  </div>
-
+<div class="footer">
+  get the source code on GitHub : <a href="https://github.com/traction/TableMaths">traction/TableMaths</a>
 </div>
