--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@ title: TableMaths by Traction
 <h2>Authors</h2>
 <p><a href="https://github.com/ggilder">Gabriel Gilder</a></p>
 
+<h2><a href="./releases.html">Release Notes</a></h2>
+
 <div class="footer">
   get the source code on GitHub : <a href="https://github.com/traction/TableMaths">traction/TableMaths</a>
 </div>
