* Adding @TheSeg to contributors list.

--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@ title: TableMaths by Traction
 <p>Currently tested in Firefox, Safari, and Chrome.</p>
 
 <h2>Authors</h2>
-<p><a href="https://github.com/ggilder">Gabriel Gilder</a></p>
+<ul>
+  <li><a href="https://github.com/ggilder">Gabriel Gilder</a></li>
+  <li><a href="https://github.com/TheSeg">John "Seg" Seggerson</a></li>
+</ul>
 
 <h2><a href="./releases.html">Release Notes</a></h2>
 
