* Minor copy changes to index page.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ title: TableMaths by Traction
 <h2>Compatibility</h2>
 <p>Currently tested in Firefox, Safari, and Chrome.</p>
 
-<h2>Authors</h2>
+<h2>Contributers</h2>
 <ul>
   <li><a href="https://github.com/ggilder">Gabriel Gilder</a></li>
   <li><a href="https://github.com/TheSeg">John "Seg" Seggerson</a></li>
@@ -31,5 +31,5 @@ title: TableMaths by Traction
 <h2><a href="./releases.html">Release Notes</a></h2>
 
 <div class="footer">
-  get the source code on GitHub : <a href="https://github.com/traction/TableMaths">traction/TableMaths</a>
+  <a href="https://github.com/traction/TableMaths">Get the source code on GitHub.</a>
 </div>
